--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 
     <build>
         <!-- 此处填写打包后的jar文件名 -->
-        <finalName>${groupId}.${artifactId}</finalName>
+        <finalName>${project.groupId}.${project.artifactId}</finalName>
 
         <!-- 将依赖包输出到 target\lib 中, 将lib目录复制到插件 同名文件夹下 即可导入依赖 -->
         <plugins>
@@ -53,6 +53,7 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+                <version>3.8.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
