--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>sandtechnology</groupId>
     <artifactId>dantui</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.2</version>
     <repositories>
         <repository>
             <id>jcenter</id>
