同步Mirai版本号并修复双内核机器人同时运行的问题

--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
     <dependencies>
         <dependency>
             <groupId>net.mamoe</groupId>
-            <artifactId>mirai-core-qqandroid-jvm</artifactId>
-            <version>0.37.0</version> <!-- 替换版本为最新版本 -->
+            <artifactId>mirai-core-qqandroid</artifactId>
+            <version>0.37.3</version> <!-- 替换版本为最新版本 -->
         </dependency>
         <dependency>
             <groupId>net.mamoe</groupId>
