--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
     <version>2.3</version>
     <repositories>
         <repository>
+            <id>jcenter-ali</id>
+            <url>https://maven.aliyun.com/nexus/content/repositories/jcenter</url>
+        </repository>
+        <repository>
             <id>jcenter</id>
             <url>https://jcenter.bintray.com/</url>
         </repository>
@@ -17,6 +21,7 @@
             <url>https://dl.bintray.com/kotlin/kotlin-eap</url>
         </repository>
     </repositories>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -26,7 +31,7 @@
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-qqandroid</artifactId>
-            <version>0.37.5</version> <!-- 替换版本为最新版本 -->
+            <version>0.38.0</version> <!-- 替换版本为最新版本 -->
         </dependency>
         <dependency>
             <groupId>net.mamoe</groupId>
