--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-qqandroid</artifactId>
-            <version>1.0.2</version> <!-- 替换版本为最新版本 -->
+            <version>1.1-EA</version> <!-- 替换版本为最新版本 -->
         </dependency>
         <dependency>
             <groupId>com.vdurmont</groupId>
