--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>sandtechnology</groupId>
     <artifactId>dantui</artifactId>
-    <version>2.5.7</version>
+    <version>2.5.8</version>
     <repositories>
         <!-->
         <repository>
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-qqandroid</artifactId>
-            <version>1.1-EA2</version> <!-- 替换版本为最新版本 -->
+            <version>1.1.3</version> <!-- 替换版本为最新版本 -->
         </dependency>
         <dependency>
             <groupId>com.vdurmont</groupId>
@@ -73,28 +73,28 @@
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
                 <executions>
+                    <!--> <execution>
+                         <id>compile</id>
+                         <goals>
+                             <goal>compile</goal>
+                         </goals>
+                         <configuration>
+                             <sourceDirs>
+                                 <sourceDir>${project.basedir}/src/main/java</sourceDir>
+                             </sourceDirs>
+                         </configuration>
+                     </execution>
                     <execution>
-                        <id>compile</id>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <configuration>
-                            <sourceDirs>
-                                <sourceDir>${project.basedir}/src/main/java</sourceDir>
-                            </sourceDirs>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>test-compile</id>
-                        <goals>
-                            <goal>test-compile</goal>
-                        </goals>
-                        <configuration>
-                            <sourceDirs>
-                                <sourceDir>${project.basedir}/src/test/java</sourceDir>
-                            </sourceDirs>
-                        </configuration>
-                    </execution>
+                         <id>test-compile</id>
+                         <goals>
+                             <goal>test-compile</goal>
+                         </goals>
+                         <configuration>
+                             <sourceDirs>
+                                 <sourceDir>${project.basedir}/src/test/java</sourceDir>
+                             </sourceDirs>
+                         </configuration>
+                     </execution><-->
                 </executions>
             </plugin>
             <plugin>
@@ -140,6 +140,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -151,11 +152,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
                 <configuration>
                     <filters>
                         <filter>
                             <artifact>*:*</artifact>
                             <excludes>
+                                <exclude>module-info.class</exclude>
+                                <exclude>META-INF/*.kotlin_module</exclude>
+                                <exclude>META-INF/MANIFEST.MF</exclude>
                                 <exclude>META-INF/*.SF</exclude>
                                 <exclude>META-INF/*.DSA</exclude>
                                 <exclude>META-INF/*.RSA</exclude>
