--- a/pom.xml
+++ b/pom.xml
@@ -34,17 +34,22 @@
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-qqandroid</artifactId>
-            <version>1.3.0</version> <!-- 替换版本为最新版本 -->
+            <version>1.3.0</version>
             <exclusions>
                 <exclusion>
-                    <groupId>org.jetbrains.kotlinx</groupId>
-                    <artifactId>kotlinx-coroutines-core</artifactId>
+                    <groupId>org.jetbrains.kotlin</groupId>
+                    <artifactId>kotlin-stdlib</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.jetbrains.kotlinx</groupId>
-                    <artifactId>kotlinx-coroutines-core-common</artifactId>
+                    <groupId>org.jetbrains.kotlin</groupId>
+                    <artifactId>kotlin-stdlib-common</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>1.4.10</version>
         </dependency>
         <dependency>
             <groupId>com.vdurmont</groupId>
@@ -77,7 +82,7 @@
 
         <!-- 将依赖包输出到 target\lib 中, 将lib目录复制到插件 同名文件夹下 即可导入依赖 -->
         <plugins>
-            <plugin>
+            <!--<plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>1.4.0</version>
@@ -93,7 +98,7 @@
                              </sourceDirs>
                          </configuration>
                      </execution>
-                    <!--<execution>
+                    <execution>
                          <id>test-compile</id>
                          <goals>
                              <goal>test-compile</goal>
@@ -103,9 +108,9 @@
                                  <sourceDir>${project.basedir}/src/test/java</sourceDir>
                              </sourceDirs>
                          </configuration>
-                     </execution>-->
+                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
