--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>dantui</artifactId>
     <version>2.7.1</version>
     <repositories>
-
         <repository>
             <id>jcenter-ali</id>
             <url>https://maven.aliyun.com/nexus/content/repositories/jcenter</url>
@@ -33,8 +32,8 @@
     <dependencies>
         <dependency>
             <groupId>net.mamoe</groupId>
-            <artifactId>mirai-core-all</artifactId>
-            <version>2.0-M1-1</version>
+            <artifactId>mirai-core-jvm</artifactId>
+            <version>2.0-RC-dev-5</version>
         </dependency>
         <dependency>
             <groupId>com.vdurmont</groupId>
