--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-jvm</artifactId>
-            <version>2.0-RC</version>
+            <version>2.0.0-dev-2</version>
         </dependency>
         <dependency>
             <groupId>com.vdurmont</groupId>
