--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>sandtechnology</groupId>
     <artifactId>dantui</artifactId>
-    <version>2.8.5</version>
+    <version>2.8.6</version>
     <repositories>
         <repository>
             <id>jcenter-ali</id>
@@ -24,7 +24,7 @@
 
     <properties>
 
-        <kotlin.version>1.5.20</kotlin.version>
+        <kotlin.version>1.5.30</kotlin.version>
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-jvm</artifactId>
-            <version>2.8.0-M1</version>
+            <version>2.9.0-M1</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.jetbrains.kotlin</groupId>
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
-            <version>1.5.31</version>
+            <version>${kotlin.version}</version>
         </dependency>
         <dependency>
             <groupId>com.vdurmont</groupId>
@@ -93,35 +93,35 @@
 
         <!-- 将依赖包输出到 target\lib 中, 将lib目录复制到插件 同名文件夹下 即可导入依赖 -->
         <plugins>
-            <!--<plugin>
+            <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
-                <version>1.4.0</version>
+                <version>1.5.30</version>
                 <executions>
-                     <execution>
-                         <id>compile</id>
-                         <goals>
-                             <goal>compile</goal>
-                         </goals>
-                         <configuration>
-                             <sourceDirs>
-                                 <sourceDir>${project.basedir}/src/main/java</sourceDir>
-                             </sourceDirs>
-                         </configuration>
-                     </execution>
                     <execution>
-                         <id>test-compile</id>
-                         <goals>
-                             <goal>test-compile</goal>
-                         </goals>
-                         <configuration>
-                             <sourceDirs>
-                                 <sourceDir>${project.basedir}/src/test/java</sourceDir>
-                             </sourceDirs>
-                         </configuration>
-                     </execution>
+                        <id>compile</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <sourceDir>${project.basedir}/src/main/java</sourceDir>
+                            </sourceDirs>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>test-compile</id>
+                        <goals>
+                            <goal>test-compile</goal>
+                        </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <sourceDir>${project.basedir}/src/test/java</sourceDir>
+                            </sourceDirs>
+                        </configuration>
+                    </execution>
                 </executions>
-            </plugin>-->
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -187,6 +187,20 @@
                         </manifest>
                     </archive>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <version>1.5.30</version>
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <phase>process-sources</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
